--- a/res/layout/token_signup.xml
+++ b/res/layout/token_signup.xml
@@ -1,8 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="vertical" android:background="@color/WhiteSmoke" >
+              android:orientation="vertical" android:background="@color/WhiteSmoke">
 
     <LinearLayout
             android:orientation="vertical"
@@ -34,7 +33,7 @@
                     android:inputType="number"
                     android:ems="10"
                     android:id="@+id/edTxtToken"
-                    android:text="Verification Token"
+                    android:text="Account Number"
                     style="@style/EditTextAppTheme"
                     android:layout_weight="1"
                     android:singleLine="true"
